--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
 server.port = 8081
+
+#ADDED FOR REGISTERING EUREKA SERVER .. @ENABLEEUREKASERVER annotation server in 2022 spring boot version
+spring.application.name = EMPLOYEE-SERVICE
+eureka.instance.client.serverUrl.defaultZone = http://localhost:8761/eureka/
