--- a/department-service/pom.xml
+++ b/department-service/pom.xml
@@ -18,6 +18,7 @@
 		<org.mapstruct.version>1.6.0.Beta1</org.mapstruct.version> <!--	added for mapStruct	-->
 		<org.projectlombok.version>1.18.30</org.projectlombok.version> <!--	added for mapStruct	-->
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version><!--	added for mapStruct	-->
+		<spring-cloud.version>2023.0.0</spring-cloud.version>  <!--added for spring cloud -->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -55,8 +56,26 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 		</dependency>
-	</dependencies>
 
+		<dependency> <!-- added for eureka server client -->
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
+	</dependencies>
+<!-- added Spring cloud	-->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<!-- added Spring cloud	-->
 	<build>
 		<plugins>
 			<plugin>
