--- a/department-service/pom.xml
+++ b/department-service/pom.xml
@@ -62,6 +62,16 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+		<!--added for centralized config git-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<!--added for centralized config git-->
 	</dependencies>
 <!-- added Spring cloud	-->
 	<dependencyManagement>
