--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/employee_db
-spring.datasource.username = root
-spring.datasource.password = daniel@12345
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto = update
-
-server.port = 8081
+#spring.datasource.url = jdbc:mysql://localhost:3306/employee_db
+#spring.datasource.username = root
+#spring.datasource.password = daniel@12345
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto = update
+#
+#server.port = 8081
 
 #ADDED FOR REGISTERING EUREKA SERVER .. @ENABLEEUREKASERVER annotation server in 2022 spring boot version
 spring.application.name = EMPLOYEE-SERVICE
-eureka.instance.client.serverUrl.defaultZone = http://localhost:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone = http://localhost:8761/eureka/
+#to recognize config server is there in port 8888
+spring.config.import=optional:configserver:http://localhost:8888
