Added Docker RabbitMQ and BusRefresh Actuator

--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.config.import=optional:configserver:http://localhost:8888
 
 #it'll include all the actuator endpoints
 management.endpoints.web.exposure.include = *
+
+#Docker - RabbitMQ credentials for Message broker-BusRefresh
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+#default username and password
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
