--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.application.name = EMPLOYEE-SERVICE
 #eureka.instance.client.serverUrl.defaultZone = http://localhost:8761/eureka/
 #to recognize config server is there in port 8888
 spring.config.import=optional:configserver:http://localhost:8888
+
+#Docker - RabbitMQ credentials for Message broker-BusRefresh
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+#default username and password
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#it'll include all the actuator endpoints
+management.endpoints.web.exposure.include = *
