--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,4 +24,9 @@ spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
 #spring.cloud.gateway.routes[1].uri=http://localhost:8080
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
 
+spring.zipkin.base-url=http://localhost:9411/zipkin/
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
+
 
