Added Resilience4J Implentation(Circuit Pattern and Retry Pattern)

--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -102,6 +102,14 @@
 			<artifactId>feign-micrometer</artifactId>
 		</dependency> <!--added for distributed tracing zipkin-->
 
+		<dependency> <!--added for CircuitBreaker-->
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
+		<dependency> <!--added for CircuitBreaker, to get the logging info-->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 	</dependencies>
 	<!--added for cloud Openfeign to make microservice communication-->
 	<dependencyManagement>
