--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -21,4 +21,30 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 #it'll include all the actuator endpoints
-management.endpoints.web.exposure.include = *
+management.endpoints.web.exposure.include = health
+management.endpoint.health.show-details= always
+management.health.circuitbreakers.enabled = true
+
+#circuit Breaker Configuration ::https://resilience4j.readme.io/docs/circuitbreaker visit this to know abt properties
+
+#it'll enable healthindicator for circuitbreaker
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.failureRateThreshold=50
+
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.minimumNumberOfCalls=5
+
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.waitDurationInOpenState=5s
+
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permittedNumberOfCallsInHalfOpenState=3
+
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowSize=10
+
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowType=COUNT_BASED
+
+#Retry Pattern --> https://resilience4j.readme.io/docs/retry
+resilience4j.retry.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+resilience4j.retry.instances.EMPLOYEE-SERVICE.maxAttempts=5
+resilience4j.retry.instances.EMPLOYEE-SERVICE.waitDuration=1s
