--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,6 +24,12 @@ spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
 #spring.cloud.gateway.routes[1].uri=http://localhost:8080
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
 
+## ROUTE(PATHFINDING or DIRECTION) for DEPARTMENT-SERVICE
+spring.cloud.gateway.routes[2].id=ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].uri=lb://ORGANIZATION-SERVICE
+#spring.cloud.gateway.routes[1].uri=http://localhost:8083
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
+
 spring.zipkin.base-url=http://localhost:9411/zipkin/
 management.tracing.sampling.probability=1.0
 
