--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -33,5 +33,6 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
 spring.zipkin.base-url=http://localhost:9411/zipkin/
 management.tracing.sampling.probability=1.0
 
-
-
+#added to stop error(Access to XMLHttpRequest at 'http://localhost:9191/api/employees/1' from origin 'http://localhost:3000' has been blocked by CORS.
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE
