--- a/organization-service/pom.xml
+++ b/organization-service/pom.xml
@@ -86,6 +86,12 @@
 			<groupId>io.github.openfeign</groupId>
 			<artifactId>feign-micrometer</artifactId>
 		</dependency> <!--added for distributed tracing zipkin-->
+
+		<dependency> <!--added for Swagger UI-->
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 
