--- a/department-service/pom.xml
+++ b/department-service/pom.xml
@@ -94,6 +94,13 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-micrometer</artifactId>
         </dependency> <!--added for distributed tracing zipkin-->
+
+        <dependency> <!--added for Swagger UI-->
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
     </dependencies>
     <!-- added Spring cloud	-->
     <dependencyManagement>
